--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,9 +31,11 @@
         <div class="container">
             <table class="table">
                 <thead class="thead-dark">
-                    <th scope="col">#</th>
-                    <th scope="col">팀</th>
-                    <th scope="col">이름</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Hit</th>
+                    <th scope="col">Writer</th>
+                    <th scope="col">Create Time</th>
                 </thead>
                 <tbody id="table-body"></tbody>
             </table>
@@ -47,17 +49,21 @@
         <script>
             let tableBody = document.getElementById("table-body");
             tableBody.insertRow(0)
-            let fetchingData = fetch("http://localhost:8080/usrdata")
+            let fetchingData = fetch("http://localhost:8080/article", { method: 'GET' })
                                 .then(data => data.json())
                                 .then((el) => {
                                     el.forEach(data => {
                                         let row = tableBody.insertRow(1);
-                                        let codeCol = row.insertCell(0);
-                                        let teamCol = row.insertCell(1);
-                                        let nameCol = row.insertCell(2);
-                                        codeCol.innerHTML = data.code;
-                                        teamCol.innerHTML = data.team;
-                                        nameCol.innerHTML = data.name;
+                                        let idCol = row.insertCell(0);
+                                        let titleCol = row.insertCell(1);
+                                        let hitCol = row.insertCell(2);
+                                        let writerCol = row.insertCell(3);
+                                        let dateCol = row.insertCell(4);
+                                        idCol.innerHTML = data.idx;
+                                        titleCol.innerHTML = data.title;
+                                        hitCol.innerHTML = data.hit_CNT;
+                                        writerCol.innerHTML = data.crea_ID;
+                                        dateCol.innerHTML = data.crea_DTM;
                                     })
                                 })
                                 .catch(err => console.log(err));
