--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -26,27 +26,27 @@
             </div>
         </nav>
         <div class="container">
-            <form action="/usrdata" method="POST"> <!-- This is must be change the action uri -->
+            <form action="/form" th:action="@{/form}" th:object="${member}" method="post"> <!-- This is must be change the action uri -->
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="text" class="form-control"  name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="text" class="form-control" th:field="*{email}" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                    <input type="password" class="form-control" th:field="*{password}" name="password" id="password" placeholder="Password">
                 </div>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                    <input type="text" class="form-control" th:field="*{name}" name="name" id="name" placeholder="Name">
                 </div>
                 <div class="form-group">
                     <label for="address">Address</label>
-                    <input type="text" class="form-control" name="address" id="address" placeholder="Address">
+                    <input type="text" class="form-control" th:field="*{address}" name="address" id="address" placeholder="Address">
                 </div>
                 <div class="form-group">
                     <label for="tel">Tel</label>
-                    <input type="text" class="form-control" name="tel" id="tel" placeholder="Tel">
+                    <input type="text" class="form-control" th:field="*{tel}" name="tel" id="tel" placeholder="Tel">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
