--- a/src/main/resources/static/boardwrite.html
+++ b/src/main/resources/static/boardwrite.html
@@ -7,8 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>홈페이지</title>
+    <style>
+        .noresize {
+            resize: none;
+        }
+    </style>
+    <title>게시글 작성</title>
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,21 +29,18 @@
                 </form>
             </div>
         </nav>
-
-        <h1>Hello, world!</h1>
-
         <div class="container">
-            <table class="table">
-                <thead class="thead-dark">
-                    <th scope="col">ID</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Hit</th>
-                    <th scope="col">Writer</th>
-                    <th scope="col">Create Time</th>
-                </thead>
-                <tbody id="table-body"></tbody>
-            </table>
-            <button type="button" class="btn btn-primary float-right"><a class="text-light " href="boardwrite.html">게시글 작성</a></button>
+            <form action="/article" th:action="@{/article}" th:object="${article}" method="post">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" class="form-control" th:field="*{title}" name="title" id="title" aria-describedby="titleHelp" placeholder="Enter title">
+                </div>
+                <div class="form-group">
+                    <label for="name">Contents</label>
+                    <textarea type="textarea" class="form-control noresize" th:field="*{contents}" name="contents" id="contents" placeholder="contents" rows="18" cols="300"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
 
         <!-- Optional JavaScript -->
@@ -47,27 +48,5 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script>
-            let tableBody = document.getElementById("table-body");
-            tableBody.insertRow(0)
-            let fetchingData = fetch("http://localhost:8080/article", { method: 'GET' })
-                                .then(data => data.json())
-                                .then((el) => {
-                                    el.forEach(data => {
-                                        let row = tableBody.insertRow(1);
-                                        let idCol = row.insertCell(0);
-                                        let titleCol = row.insertCell(1);
-                                        let hitCol = row.insertCell(2);
-                                        let writerCol = row.insertCell(3);
-                                        let dateCol = row.insertCell(4);
-                                        idCol.innerHTML = data.idx;
-                                        titleCol.innerHTML = data.title;
-                                        hitCol.innerHTML = data.hit_CNT;
-                                        writerCol.innerHTML = data.crea_ID;
-                                        dateCol.innerHTML = data.crea_DTM;
-                                    })
-                                })
-                                .catch(err => console.log(err));
-        </script>
   </body>
 </html>
