--- a/src/main/resources/static/boardDetail.html
+++ b/src/main/resources/static/boardDetail.html
@@ -7,12 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        .noresize {
-            resize: none;
-        }
-    </style>
-    <title>게시글 작성</title>
+
+    <title>홈페이지</title>
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,22 +25,11 @@
                 </form>
             </div>
         </nav>
+
         <div class="container">
-            <form action="/article" th:action="@{/article}" th:object="${article}" method="post">
-                <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" class="form-control" th:field="*{title}" name="title" id="title" aria-describedby="titleHelp" placeholder="Enter title">
-                </div>
-                <div class="form-group">
-                    <label for="name">Contents</label>
-                    <textarea type="textarea" class="form-control noresize" th:field="*{contents}" name="contents" id="contents" placeholder="contents" rows="18" cols="300"></textarea>
-                </div>
-                <div class="form-group" style="display: none;">
-                    <label for="crea_id">crea_id</label>
-                    <input type="text" class="form-control" th:field="*{crea_id}" name="crea_id" id="crea_id" aria-describedby="crea_idHelp" placeholder="Enter crea_id" value="test3@naver.com">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            <h1 id="title"></h1>
+            <p id="contents"></p>
+            <button type="button" class="btn btn-primary float-right"><a class="text-light " href="index.html">목록으로</a></button>
         </div>
 
         <!-- Optional JavaScript -->
@@ -52,5 +37,18 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script>
+            let title = document.getElementById("title");
+            let contents = document.getElementById("contents");
+            let fetchingData = fetch("http://localhost:8080/article", { method: 'GET' })
+                                .then(data => data.json())
+                                .then((el) => {
+                                    el.forEach(data => {
+                                        title.innerHTML = data.title;
+                                        contents.innerHTML = data.contents;
+                                    })
+                                })
+                                .catch(err => console.log(err));
+        </script>
   </body>
 </html>
